--- a/portfolio.html
+++ b/portfolio.html
@@ -112,8 +112,8 @@
             <div class="content">
                 <h1>Portfolio</h1>
                 <ul id="portfolio">
-                    <li><a href="https://orange-happiness-97qp9vpq597x279g5-5500.app.github.dev/platformerJS.html">Platformer: A cannon-dodging, collectible-grabbing adventure game for Halleb0t</a>
-                    <li><a href="https://orange-happiness-97qp9vpq597x279g5-5500.app.github.dev/clicker.html">Clicker: A cat clicking game</a></li>
+                    <li><a href="platformerJS.html">Platformer: A cannon-dodging, collectible-grabbing adventure game for Halleb0t</a>
+                    <li><a href="clicker.html">Clicker: A cat clicking game</a></li>
                      </ul>
             </div>
         </main>
