--- a/index.html
+++ b/index.html
@@ -1,67 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home page</title>
-    <style>
-        /* Navbar styling */
-nav {
-    background: rgba(138, 2, 196, 0.955); /* Background color for the navbar */
-    color: white; /* Text color */
-    padding: 20px; /* Padding inside the navbar */
-    display: flex; /* Flexbox layout to align items */
-    justify-content: space-between; /* Space between title and links */
-    align-items: center; /* Vertically center the items */
-    margin-bottom: 30px; /* Space below the navbar */
-}
+<!DOCTYPE HTML>
+<html>
+    <head>
+    <title>Risk of Title</title>
+    <link rel="stylesheet" href="style.css">
+    </head>
 
-h1 {
-    margin: 5; /* Remove default margin */
-    font-size: 30px; /* Font size for the website title */
-}
+    <body>
+<div id="all-contents">
 
-#nav-ul {
-    list-style-type: none; /* Remove default list bullets */
-    padding: 5; /* Remove default padding */
-    margin: 5; /* Remove default margin */
-    display: flex; /* Flexbox layout for horizontal list items */
-}
-
-.nav-li {
-    margin: 0 25px; /* Space between each navigation item */
-}
-
-a {
-    color: white; /* Link text color */
-    text-decoration: none; /* Remove underline from links */
-}
-
-/* Add a hover effect for the navigation links */
-a:hover {
-    color: #f971ce; /* Change color on hover */
-}
-
-    </style>
-</head>
-<body>
     <nav>
-        <h1>Ben Booth</h1>
-        <ul id="nav-ul">
-            <li class="nav-li"><a href="https://orange-happiness-97qp9vpq597x279g5-5500.app.github.dev/">Home</a></li>
-            <li class="nav-li"><a href="https://orange-happiness-97qp9vpq597x279g5-5500.app.github.dev/portfolio.html">Portfolio</a></li>
-        </ul>
+<h1>Wowie</h1>
+<ul id="nav-ul">
+    <li class="nav-li"><a href="index.html"> Home </a>
+    </li>
+    <li class="nav-li"><a href="portfolio.html"> Portfolio </a>
+    </li>
+</ul>
     </nav>
 
+<main>
+    <!-- Sidebar section -->
+    <div class="sidebar">
+        <img class="sidebar-img"src="https://static.wikia.nocookie.net/five-nights-at-treasure-island-rp/images/b/ba/Huh_Cat_Promo.png/revision/latest?cb=20240209214204" alt="Image no work" height=300px">
+    </div>
 
-    <img src="https://www.kroger.com/product/images/xlarge/front/0000000004430" alt="Pineapple wow" width="201" height="200">
-
+    <!-- Content section -->
+    <div class="content">
+<h2>Ben B</h2>
+<p>Student of Fontainebleau Highschool</p>
+<!-- Interests section -->
+ <div id="interests">
+    <h3>Interests:</h3>
     <ul>
-        <li>Animation</li>
-        <li>Coding</li>
-        <li>Pineapple</li>
-      </ul>
+        <li>A Risk of Rain</li>
+        <li>Alien Fish</li>
+        <li>Trippable Stairs</li>
 
+    </ul>
+ </div>
+    </div>
 
-</body>
+    </div>
+    </body>
 </html>
