--- a/clicker.html
+++ b/clicker.html
@@ -9,27 +9,27 @@
 <img id="cat" src="https://static.wikia.nocookie.net/five-nights-at-treasure-island-rp/images/b/ba/Huh_Cat_Promo.png/revision/latest?cb=20240209214204" alt="Image no work" width="700" height="400">
 <h1 id="score">score = 0</h1>
 <h1 id="upgrade"> "Upgrade Huh"</h1>
-
+<button id="upgrade">Upgrade Haiii</button>
 </body>
 </html>
 
 <script>
-document.getElementById("cat").addEventListener("click",up)
 
 var score = 0
 var clickperclick = 0
 
+document.getElementById("cat").addEventListener("click",up)
+
 function up(){
-  score=score + 1
-  document.getElementById("score").innerHTML = "score ="+ score;
-  console.log(score)
+  document.getElementById("cat").html + score + 1;
+  alert()
 }
 
-  document.getElementById("upgrade").addEventListener("click",upgrade)
+  document.getElementById("upgrade").addEventListener("click",upgradebutton)
 
-function upgrade(){
+function upgradebutton(){
   if(clicksperclick=1)
-  document.getElementById("upgrade").innerHTML = "clicksperclick="+ test!!!;
+  document.getElementById("upgrade").innerHTML = "clicksperclick=";
   console.log(score)
 }
 
