--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <main>
     <!-- Sidebar section -->
     <div class="sidebar">
-        <img class="sidebar-img"src="https://static.wikia.nocookie.net/five-nights-at-treasure-island-rp/images/b/ba/Huh_Cat_Promo.png/revision/latest?cb=20240209214204" alt="Image no work" height=300px">
+        <img class="sidebar-img"src="https://images.pexels.com/photos/2071882/pexels-photo-2071882.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Image no work" height=300px">
     </div>
 
     <!-- Content section -->
