--- a/projects/yippee.html
+++ b/projects/yippee.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bouncing Ball with Gravity</title>
+    <title> Yippee Hooray </title>
 </head>
 <body>
     <canvas id="canvas"></canvas>
@@ -22,7 +22,7 @@
         var ballSpeedX = []
         var ballSpeedY = []
         var ballRadius = []
-        
+
         var gravity = 0.01; //change to 0.1 for normal//
         var bounceFactor = 0.9;
         var friction = 0.99;
